fixed input text color on dark mode

--- a/src/app/components/atoms/Input/Input.module.scss
+++ b/src/app/components/atoms/Input/Input.module.scss
@@ -6,6 +6,7 @@
     border: none;
     outline: none;
     background-color: var(--secondary-background-color);
+    color: var(--text-color);
 
     &:focus {
       -webkit-box-shadow: inset 0 0 1px 2px var(--main-color);
